// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RichDropdown/> should render a rich dropdown 1`] = `
<div
  className=""
>
  <UncontrolledButtonDropdown>
    <DropdownToggle
      aria-haspopup={true}
      caret={true}
      color="secondary"
    >
      foo
    </DropdownToggle>
    <DropdownMenu
      className="dropdown"
      flip={true}
      tag="div"
    >
      <RichDropdownOptions
        onClick={[MockFunction]}
        options={
          Object {
            "key": "foo",
            "label": "Foo",
          }
        }
      />
    </DropdownMenu>
  </UncontrolledButtonDropdown>
</div>
`;

exports[`<RichDropdown/> should render a rich dropdown 2`] = `
<div
  className=""
>
  <UncontrolledButtonDropdown>
    <DropdownToggle
      aria-haspopup={true}
      caret={true}
      color="secondary"
    >
      foo
    </DropdownToggle>
    <DropdownMenu
      className="dropdown"
      flip={true}
      tag="div"
    >
      <RichDropdownOptions
        onClick={[MockFunction]}
        options={
          Object {
            "key": "foo",
            "label": "FOO",
            "options": Array [
              Object {
                "key": "foo",
                "label": "Foo",
              },
              Object {
                "description": "foobar",
                "key": "bar",
                "label": "Bar",
              },
            ],
          }
        }
      />
    </DropdownMenu>
  </UncontrolledButtonDropdown>
</div>
`;
